--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,height=device-height">
-    <title>顾客喜爱菜品图</title>
+    <title>调查对象年龄分布</title>
     <script defer src="my-charts.dart.js"></script>
     <style>
       ::-webkit-scrollbar {
@@ -29,20 +29,20 @@
     <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.data-set-0.10.1/dist/data-set.min.js"></script>
     <script>
       var data = [{
-        menu: '板栗炖鸡',
-        number: 6
-      }, {
-        menu: '虾仁滑蛋',
-        number: 2
-      }, {
-        menu: '番茄牛腩',
-        number: 4
-      }, {
-        menu: '豉汁排骨',
-        number: 8
-      },{
-        menu: '芝士虾球',
+        menu: '12-18',
         number: 10
+      }, {
+        menu: '18-25',
+        number: 5
+      }, {
+        menu: '25-40',
+        number: 7
+      }, {
+        menu: '40-60',
+        number: 5
+      },{
+        menu: '60+',
+        number: 2
       }];
 
       var chart = new G2.Chart({
